<resources>
    <string name="app_name">文化创意</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置主机</string>
    <string name="et_username">请输入用户名</string>
    <string name="et_password">请输入密码</string>
    <string name="tv_welcome">Welcome</string>
    <string name="btn_login">登录</string>
    <string name="btn_logining">登录中...</string>
    <string name="et_host">请输入主机地址</string>
    <string name="et_port">请输入端口号</string>
    <string name="tv_host">设置主机地址</string>
    <string name="til_user_name">请输入用户名</string>
    <string name="til_user_password">请输入密码</string>
    <string name="til_user_password_again">请确认密码</string>
    <string name="btn_sign_up">注册</string>
    <string name="btn_sign_uping">正在注册...</string>
    <string name="tv_sign_up">这里注册</string>
    <string name="chengtao">ChengTao</string>
    <string name="person">个人信息</string>
    <string name="long_text">dskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\ndskfhdskahfs\n\n</string>
    <string name="cb_company">公司用户？</string>
    <string name="btn_logout">注销</string>
</resources>
