<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">
    <TextView
        android:textSize="25sp"
        android:text="@string/tv_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginTop="5dp"
        android:background="#666666"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="18sp"
            android:hint="@string/et_host"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="18sp"
            android:hint="@string/et_port"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>